[package]
name = "nrjmeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rust_gpiozero = "^0.2"
#config = "0.13"
gpio-cdev = "0.5.1"
async-nats = "0.24.0"
tokio = "1.23.0"
chrono = "0.4.23"
serde_json = "1.0.90"
serde = "1.0.151"
#sprintf = "0.1.3"