[package]
name = "nrjmeter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#https://docs.rs/tokio/1.0.0/tokio/#feature-flags
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
gpiocdev = { version = "0.6.1", features = ["async_tokio"] }
async-nats = "0.33.0"
chrono = "0.4.31"
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false